--- a/web/demo.html
+++ b/web/demo.html
@@ -2,56 +2,33 @@
 
 <main class="bd-pageheader">
   <div class="container">
-    <h1>ng2_strap</h1>
+    <h1>Ng Bootstrap</h1>
 
-    <p>Native Angular2 directives for Bootstrap</p>
-    <a class="btn btn-primary" href="https://github.com/luisvt/ng2-strap">View on GitHub</a>
-
-    <div class="row">
-      <div class="col-lg-1">
-        <iframe src="https://ghbtns.com/github-btn.html?user=luisvt&repo=ng2-strap&type=star&count=true"
-                frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
-      </div>
-      <div class="col-lg-1">
-        <iframe src="https://ghbtns.com/github-btn.html?user=luisvt&repo=ng2-strap&type=fork&count=true"
-                frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
-      </div>
-    </div>
+    <p>Native Angular 2 directives for Bootstrap</p>
+    <a class="btn btn-primary" href="https://github.com/dart-league/ng_bootstrap">View on GitHub</a>
   </div>
 </main>
 <div>
-  <demo-section class="col-md-12" name="Alert">
-    <alert-demo></alert-demo>
-  </demo-section>
-  <demo-section class="col-md-12" name="Buttons">
-    <buttons-demo></buttons-demo>
-  </demo-section>
-  <demo-section class="col-md-12" name="Carousel">
-    <carousel-demo></carousel-demo>
-  </demo-section>
-  <demo-section class="col-md-12" name="Collapse">
-    <collapse-demo></collapse-demo>
-  </demo-section>
-  <demo-section class="col-md-12" name="Dropdown">
-    <dropdown-demo></dropdown-demo>
-  </demo-section>
-  <demo-section class="col-md-12" name="Pagination">
-    <pagination-demo></pagination-demo>
-  </demo-section>
-  <demo-section class="col-md-12" name="Progressbar">
-    <progressbar-demo></progressbar-demo>
-  </demo-section>
-  <demo-section class="col-md-12" name="Tabs">
-    <tabs-demo></tabs-demo>
-  </demo-section>
-  <demo-section class="col-md-12" name="Typeahead">
-    <typeahead-demo></typeahead-demo>
+  <demo-section class="col-md-12">
+    <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+    <button type="button" class="btn btn-primary">Primary</button>
+
+    <!-- Secondary, outline button -->
+    <button type="button" class="btn btn-secondary">Secondary</button>
+
+    <!-- Indicates a successful or positive action -->
+    <button type="button" class="btn btn-success">Success</button>
+
+    <!-- Contextual button for informational alert messages -->
+    <button type="button" class="btn btn-info">Info</button>
+
+    <!-- Indicates caution should be taken with this action -->
+    <button type="button" class="btn btn-warning">Warning</button>
+
+    <!-- Indicates a dangerous or potentially negative action -->
+    <button type="button" class="btn btn-danger">Danger</button>
+
+    <!-- Deemphasize a button by making it look like a link while maintaining button behavior -->
+    <button type="button" class="btn btn-link">Link</button>
   </demo-section>
 </div>
-
-<footer class="footer">
-  <div class="container">
-    <p class="text-muted text-center"><a href="https://github.com/luisvt/ng2_strap">ng2_strap</a> is
-      maintained by <a href="https://github.com/luisvt">luisvt</a>.</p>
-  </div>
-</footer>
