--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
 
   <!--link to bootstrap.css-->
   <link rel="stylesheet" href="packages/ng_bootstrap/styles/ng_bootstrap.css">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="http://v4-alpha.getbootstrap.com/assets/css/docs.min.css">
 
   <script async type="application/dart" src="index.dart"></script>
   <script async src="packages/browser/dart.js"></script>
